--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/BarbDMC/StackBuilders-repositories-API#readme",
   "dependencies": {
     "axios": "^1.5.1",
+    "eslint": "^8.51.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0"
   }
 }
