--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "eslint": "^8.51.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
