--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
     "axios": "^1.5.1",
     "eslint": "^8.51.0",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
