--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
@@ -29,5 +29,6 @@
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0"
-  }
+  },
+  "type": "module"
 }
