--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "eslint": "^8.51.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0"
   },
