--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
+    "@types/supertest": "^2.0.15",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0"
   },
