--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.15",
     "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  }
 }
