--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "dev": "nodemon app.js",
+    "dev": "npx nodemon",
     "start": "node app.js"
   },
   "repository": {
@@ -23,7 +23,6 @@
     "axios": "^1.5.1",
     "eslint": "^8.51.0",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   },
@@ -33,7 +32,9 @@
     "@types/supertest": "^2.0.15",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   },
   "type": "module",
   "jest": {
