--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "stackbuilders-repositories-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "dev": "npx nodemon",
+    "dev": "nodemon --exec ts-node ./app.ts",
     "start": "node app.js"
   },
   "repository": {
@@ -23,10 +23,10 @@
     "axios": "^1.5.1",
     "eslint": "^8.51.0",
     "express": "^4.18.2",
-    "supertest": "^6.3.3",
-    "typescript": "^5.2.2"
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@tsconfig/node-lts-strictest-esm": "^18.12.1",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.15",
@@ -34,7 +34,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "type": "module",
   "jest": {
