--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "homepage": "https://github.com/BarbDMC/StackBuilders-repositories-API#readme",
   "dependencies": {
     "axios": "^1.5.1",
-    "eslint": "^8.51.0",
     "express": "^4.18.2",
     "supertest": "^6.3.3"
   },
@@ -30,6 +29,9 @@
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/supertest": "^2.0.15",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
